# o3de

./: .automatedtesting.json  .clang-format  .editorconfig  .gitattributes  .gitignore  .lfsconfig  .p4ignore  ALL_BUILD.vcxproj  AssetImporterSettings.json  AssetProcessorPlatformConfig.ini  AssetProcessorPlatformConfig.setreg  BuildAtomSampleViewer_Paks_PC.bat  BuildAtomTest_Paks_PC.bat  BuildCMakeTestbed_Paks_PC.bat  BuildDBAs.bat  BuildReleaseAuxiliaryContent.py  Build_AssetBundler_AuxiliaryContent_PC.bat  CMakeCache.txt  CMakeFiles.vcxproj  CMakeFiles.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestTestfile.cmake  DetermineRCandAP.bat  Directory.Build.props  Doxyfile_ScriptBinds  GenerateVS.bat  HelloWorld.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE.txt  LICENSE_APACHE2.TXT  LICENSE_MIT.TXT  O3DE.sln  README.md  RETIRED_CODE.md  RUN_TESTS.vcxproj  (+48 more)
AutomatedTesting/: .android_settings  .gitignore  AssetBundlerUserSettings.json  AssetProcessorGamePlatformConfig.setreg  AutomatedTesting_Dependencies.xml  CMakeLists.txt  CMakePresets.json  EngineFinder.cmake  UtilTest_PhysxConfig_Override.physxconfiguration  default.blastconfiguration  game.cfg  gems.json  physicssurfaces.physxmaterial  project.json  surfacetypemateriallibrary.physmaterial  test1.lua  test123.scriptcanvas  test2.lua
AutomatedTesting/AutomationScripts/: RunAtomScreenshotTests.bat  RunAtomScreenshotTests.sh
AutomatedTesting/Config/: Editor.xml  Game.xml  Server.xml  aws_resource_mappings.json  default_aws_resource_mappings.json  shader_global_build_options.json
AutomatedTesting/DiffuseProbeGrids/: DiffuseGI_01_1B66C428-1D7C-4A53-BC9B-6F23E420FEC0_Irradiance_lutrgba16.dds  DiffuseGI_01_52D75B1C-90BE-40A8-A874-3376F6B39299_Relocation_lutrgba16f.dds  DiffuseGI_01_5A2C9A6B-F914-4D9E-8098-2AD411B69F87_Distance_lutrg32f.dds  DiffuseGI_01_A483018F-78ED-4814-986F-F925B0AA5EF8_Classification_lutr32f.dds  DiffuseGI_02_222F1F65-BF31-4E0D-9957-14AE73194A37_Classification_lutr32f.dds  DiffuseGI_02_84D0F8A4-AD4F-4FD1-BA26-4803EAD88FE2_Distance_lutrg32f.dds  DiffuseGI_02_9DC8C208-5327-4F0F-B1DF-C98F7F81F07D_Relocation_lutrgba16f.dds  DiffuseGI_02_A78EEAF4-7CB2-4635-AA6F-2ED677328706_Irradiance_lutrgba16.dds
AutomatedTesting/Fonts/: default-ui1024.xml  default-ui2048.font  default-ui2048.xml  default2048.font  default2048.xml
AutomatedTesting/Gem/: AssetProcessorGemConfig.ini  AssetProcessorGemConfig.setreg  CMakeLists.txt  gem.json
AutomatedTesting/LightingPresets/: greenwich_park_02.lightingconfig.json  greenwich_park_02_4k_iblskyboxcm.exr
AutomatedTesting/LuaScripts/: ScriptAutomation_sample.lua  instance_counter_blender.lua
AutomatedTesting/LutGeneration/: SavedLut_{66C5B3E7-B9A8-4B98-9925-0F51C93DDAFA}.3dl
AutomatedTesting/Materials/: DefaultPBR.material  DefaultPBRTransparent.material  MinimalBlue.material  UVs.azsl  UVs.material  UVs.materialtype  UVs.shader  am_grass1.mtl  am_rockground.mtl  basic_grey.material  floor_tile.mtl  ter_layer_green.mtl  terrain_grass_01.mtl  test_texture_sequence.mtl
AutomatedTesting/Objects/: ShaderBall_simple.fbx  bunny.fbx  cone.fbx  cylinder.fbx  plane.fbx  sphere_5lods.fbx  sphere_5lods.fbx.assetinfo  suzanne.fbx
AutomatedTesting/Passes/: ClipmapGeneration.pass  MainPipeline.pass  PassTemplates.azasset
AutomatedTesting/ReflectionProbes/: ReflectionProbe_Lion__CA20BB89-1587-4410-80BA-8150CB0EF47B__iblspecularcm512.dds  ReflectionProbe_Scene__D245F488-152E-4A3A-898B-FBCF71E4A87A__iblspecularcm256.dds  ReflectionProbe_UpperLevel__4DABA7BF-9367-4D95-AA5F-A9BF6BA0F7BE__iblspecularcm512.dds
AutomatedTesting/Registry/: AssetProcessorPlatformConfig.setreg  C15556261_PhysXMaterials_CharacterControllerMaterialAssignment.setreg_override  C18977601_Material_FrictionCombinePriority.setreg_override  C18981526_Material_RestitutionCombinePriority.setreg_override  C3510644_Collider_CollisionGroups.setreg_override  C4044456_Material_FrictionCombine.setreg_override  C4044457_Material_RestitutionCombine.setreg_override  C4044459_Material_DynamicFriction.setreg_override  C4044461_Material_Restitution.setreg_override  C4044697_Material_PerfaceMaterialValidation.setreg_override  C4976227_Collider_NewGroup.setreg_override  C4976245_PhysXCollider_CollisionLayerTest.setreg_override  asset_cache_server_settings.setreg  assets_scan_folders.setreg  authenticationProvider.setreg  autoexec.client.setreg  awscoreconfiguration.setreg  editorpreferences.setreg  material_pipelines.setreg  physxdebugconfiguration.setreg  physxdefaultsceneconfiguration.setreg  physxsystemconfiguration.setreg  renderpipeline.setreg  viewport.setreg
AutomatedTesting/ScriptCanvas/: C12712455_ScriptCanvas_ShapeCastVerification.scriptcanvas  C14195074_ScriptCanvas_PostUpdateEvent.scriptcanvas  C14902097_ScriptCanvas_PreUpdateEvent.scriptcanvas  C19536274_NameNode_Prints.scriptcanvas  C19536277_NameNode_NothingPrints.scriptcanvas  C6224408_ScriptCanvas_EntitySpawn.scriptcanvas  SaveAndDoNotCrash.scriptcanvas  ScriptCanvasBox.scriptcanvas  ScriptCanvas_CollisionEvents.scriptcanvas  ScriptCanvas_GetCollisionName.scriptcanvas  ScriptCanvas_OverlapNode.scriptcanvas  ScriptCanvas_PostUpdateEvent.scriptcanvas  ScriptCanvas_PreUpdateEvent.scriptcanvas  ScriptCanvas_ShapeCast.scriptcanvas  ScriptCanvas_SpawnEntityWithPhysComponents.scriptcanvas  ScriptCanvas_TwoComponents0.scriptcanvas  ScriptCanvas_TwoComponents1.scriptcanvas  (+14 more)
Code/: .p4ignore  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  motionmatching_editor_files.cmake  motionmatching_editor_shared_files.cmake  motionmatching_editor_tests_files.cmake  motionmatching_files.cmake  motionmatching_shared_files.cmake  motionmatching_tests_files.cmake
Gems/: CMakeLists.txt
scripts/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lmbr.bat  lmbr.py  lmbr.sh  o3de.bat  o3de.py  o3de.sh  setup.bat
(+45540 files in other folders)
