#
# All or portions of this file Copyright (c) Amazon.com, Inc. or its affiliates or
# its licensors.
#
# For complete copyright and license terms please see the LICENSE at the root of this
# distribution (the "License"). All use of this software is governed by the License,
# or, if provided, by the license below or the license accompanying this file. Do not
# remove or modify any license notices. This file is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#

add_subdirectory(TextureAtlas)
add_subdirectory(LmbrCentral)
add_subdirectory(LyShine)
add_subdirectory(Maestro)
add_subdirectory(SceneProcessing)
add_subdirectory(SurfaceData)
add_subdirectory(EMotionFX)
add_subdirectory(Achievements)
add_subdirectory(CameraFramework)
add_subdirectory(HttpRequestor)
add_subdirectory(Gestures)
add_subdirectory(FastNoise)
add_subdirectory(GradientSignal)
add_subdirectory(AudioSystem)
add_subdirectory(AudioEngineWwise)
add_subdirectory(GraphCanvas)
add_subdirectory(DebugDraw)
add_subdirectory(ImGui)
add_subdirectory(InAppPurchases)
add_subdirectory(LocalUser)
add_subdirectory(LyShineExamples)
add_subdirectory(ExpressionEvaluation)
add_subdirectory(MessagePopup)
add_subdirectory(PhysX)
add_subdirectory(PhysXDebug)
add_subdirectory(ScriptEvents)
add_subdirectory(AssetValidation)
add_subdirectory(VirtualGamepad)
add_subdirectory(SaveData)
add_subdirectory(Camera)
add_subdirectory(GameState)
add_subdirectory(Vegetation)
add_subdirectory(GameStateSamples)
add_subdirectory(SliceFavorites)
add_subdirectory(Metastream)
add_subdirectory(ScriptCanvas)
add_subdirectory(ScriptedEntityTweener)
add_subdirectory(StartingPointMovement)
add_subdirectory(StartingPointInput)
add_subdirectory(ScriptCanvasPhysics)
add_subdirectory(StartingPointCamera)
add_subdirectory(Presence)
add_subdirectory(ScriptCanvasTesting)
add_subdirectory(TestAssetBuilder)
add_subdirectory(ScriptCanvasDeveloper)
add_subdirectory(CustomAssetExample)
add_subdirectory(AutomatedLauncherTesting)
add_subdirectory(NvCloth)
add_subdirectory(AssetMemoryAnalyzer)
add_subdirectory(CertificateManager)
add_subdirectory(TickBusOrderViewer)
add_subdirectory(MultiplayerCompression)
add_subdirectory(Multiplayer)
add_subdirectory(SceneLoggingExample)
add_subdirectory(VideoPlaybackFramework)
add_subdirectory(CrashReporting)
add_subdirectory(Twitch)
add_subdirectory(EditorPythonBindings)
add_subdirectory(QtForPython)
add_subdirectory(Microphone)
add_subdirectory(Atom)
add_subdirectory(AtomLyIntegration)
add_subdirectory(RADTelemetry)
add_subdirectory(GraphModel)
add_subdirectory(LandscapeCanvas)
add_subdirectory(WhiteBox)
add_subdirectory(Blast)
add_subdirectory(PythonAssetBuilder)
add_subdirectory(Prefab)
add_subdirectory(AWSClientAuth)
add_subdirectory(AWSCore)
add_subdirectory(AWSMetrics)
